JG-2008-04-15-0: Enhancem.: check for IZ 2555 in loadcheck test.
                 Review:    RD

RD-2008-04-15-0: Bugfix:    fixed broken throughput test with 61
                 Review:    JG

RD-2008-04-14-1: Bugfix:    default value for schedd_job_info changed for 62
                 Review:    CR

RD-2008-04-14-0: Enhancem.: - Added error detection for performance/commlib test
                 Bugfix:    - throughput test enable queues now in one operation
                 Review:    CR

LP-2008-04-11-0: Bugfix:    Fixed smf_test_host_supported
                 Bugfix:    Added compile host to admin/submit hosts for JGDI
                            tests
                 Review:    AP

RH-2008-04-11-0: Enhancem:  Hedeby: install test adds now execd installation params for
                            for simulated hosts to the configuration of each GE service
                 Review:    RH

CR-2008-04-11-0: Cleanup:   moved *.61.exp to *.62.exp check file names
                            in checktree_hedeby (hedeby only supports 62)

CR-2008-04-10-1: Cleanup:   o refactory of procedures:
                              old: get_all_hedeby_managed_nodes()
                              new: get_all_movable_resources()
                              old: $hedeby_config(hedeby_host_resources)
                              new: get_all_spare_pool_resources()
                            o get_service_info() and get_component_info()
                              now will resolve reported hostnames to short
                              hostnames without domain name. (TS is only
                              using short hostnames)
                 Review:    RH

RD-2008-04-10-0: Enhancem:  improved commlib performance test
                 Review:    CR

CR-2008-04-10-0: Bugfix:    fixed complicate execd spool directory setup for
                            ge service installations (hedeby)
                 Review:    RH
