@@ -1,3 +1,7 @@
+RD-2008-04-15-1: Bugfix:    fixed consumable_resources, complex and subordinate
+                            test
+                 Review:    JG
+
 JG-2008-04-15-0: Enhancem.: check for IZ 2555 in loadcheck test.
                  Review:    RD
 
